# schema-org-python

./: .gitignore  Taskfile.yaml  create_pydantic.py  pyproject.toml
src/schemaorg_models/: _3_d_model.py  __class.py  __init__.py  about_page.py  accept_action.py  accommodation.py  accounting_service.py  achieve_action.py  action.py  action_access_specification.py  action_status_type.py  activate_action.py  add_action.py  administrative_area.py  adult_entertainment.py  adult_oriented_enumeration.py  advertiser_content_article.py  aggregate_offer.py  aggregate_rating.py  agree_action.py  airline.py  airport.py  alignment_object.py  allocate_action.py  am_radio_channel.py  amp_story.py  amusement_park.py  analysis_news_article.py  anatomical_structure.py  anatomical_system.py  animal_shelter.py  answer.py  apartment.py  apartment_complex.py  api_reference.py  append_action.py  apply_action.py  approved_indication.py  aquarium.py  archive_component.py  (+885 more)
tests/: test_person.py
